# SurvivalEVAL

./: .gitignore  BrierScore.py  CHANGELOG.md  Concordance.py  D_Calibration.py  Evaluator.py  L1.py  LICENSE  MANIFEST.in  One_Calibration.py  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  util.py
.github/: pull_request_template.md
Evaluations/: AreaUnderCurve.py  BrierScore.py  Concordance.py  D_Calibration.py  KM_Calibration.py  L1.py  MeanError.py  One_Calibration.py  custom_types.py  util.py
Examples/: Calibration_for_CrossValidation_Example.ipynb  Compare_Interpolation_Methods.ipynb  Dealing_Non-Monotonic_Curves.ipynb  Lifelines_Example.ipynb  PointEvaluator_Example.ipynb  PySurvival_DSM_Example.ipynb  PySurvival_auton-survival_Example.ipynb  Pycox_Example.ipynb  Scikit-survival_Example.ipynb
SurvivalEVAL/: Evaluator.py  IntervalCenEvaluator.py  __init__.py  version.py
SurvivalEVAL/Evaluations/: AreaUnderCurve.py  AreaUnderPRCurve.py  AreaUnderROCurve.py  BrierScore.py  Concordance.py  D_Calibration.py  DistributionCalibration.py  IntervalCensor.py  KM_Calibration.py  MeanError.py  OneCalibration.py  OtherMetrics.py  SingleTimeCalibration.py  TimeDependentConcordance.py  _concordance_utils.py  custom_types.py  util.py  util_plots.py
SurvivalEVAL/NonparametricEstimator/: CompetingRisks.py  MultiState.py  SingleEvent.py
SurvivalEVAL/NonparametricEstimator/SingleEvent/: CopulaGraphic.py  Fiducial.py  KaplanMeier.py  NelsonAalen.py  Turnbull.py  __init__.py  util.py
examples/: Calibration_for_CrossValidation_Example.ipynb  Compare_Interpolation_Methods.ipynb  Dealing_Non-Monotonic_Curves.ipynb  Lifelines_Example.ipynb  PointEvaluator_Example.ipynb  PySurvival_auton-survival_Example.ipynb  Pycox_Example.ipynb  Scikit-survival_Example.ipynb
test_scripts/: test_ic.py  test_single_event.py
tests/: IntervalCensor.py  IntervalCensorDGP.py  test_IntervalCensorDGP.py  test_aj_competing_risks.py  test_concordance.py  test_evaluator.py  test_func.py  test_ibs.py  test_ibs_hinge.py  test_ici.py  test_interval_cen_evaluator.py  test_interval_censor.ipynb  test_interval_censor_data.py  test_lifelines.py  test_multiple_brier.py  test_nonparametric_estimators.py  test_other_metrics.py  test_point_evaluator.py  test_pycox.py  test_quantile_evaluator.py  test_right2interval.py  test_right_censor_CRPS.py  test_single_event.py  test_time_dependent_concordance.py  test_util.py
